Refactor Contract receipt and state store model for checkout blockchain
BC and Conatract will be covert to process, and all model is not memory to databases
will check out blockchain consensus make confirm block model finality